Added frameview handling

--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 default_colours:
-- '#f0991a' #1
-- '#820000' #2
-- '#32f01a' #3
-- '#af1af0' #4
-- '#070d0d' #Background
-- '#016795' #Highlight
+- '#f0991a'
+- '#820000'
+- '#32f01a'
+- '#af1af0'
+- '#070d0d'
+- '#016795'
 resolutions:
 - 3840x2160
 - 1920x1080
@@ -12,6 +12,7 @@ resolutions:
 sub_title_presets:
 - Higher scores indicate higher performance
 - Lower scores indicate higher performance
+- test
 title_presets:
 - CPU Scores
 - GPU Scores
